# Dynamic-Transformers

./: .gitignore  DTF-Spec.md  Makefile  README.md  README_MAC.md  TRAINING_GUIDE.md  bench.py  benchmark_gpu.sh  convert_checkpoint.py  count.py  download_wb.py  dynamic_infer.py  eval.py  eval_lora.py  fix_run_eval.py  infer.py  infer_hf.py  main.py  performance_benchmark.py  pyproject.toml  pytest.ini  run_benchmark_eval.py  run_mac.sh  run_scaling_experiments.sh  run_sdt_stt_0.5B.sh  run_tests.sh  run_training.sh  setup.sh  temp_smoke_test.py  test_model.py  test_pipeline.sh  test_tdtf.py  test_tdtf_training.sh  train.py  train_gpu.sh  train_mac.py  train_mac.sh  upload_hf.py  vibe.py
.github/workflows/: test.yml
analysis/: calculate_savings.py  download_wb.py  generate_paper_figures.py  plot_lora.py  plot_loss.py  plot_loss_proportional.py  plot_prior.py  plot_router_stats.py  plot_specific_losses.py  plot_vpr.py
analysis/benchmarks/: final_model_eval_results_lora.json  final_model_eval_results_prior_0-125.json  final_model_eval_results_prior_0-25.json  final_model_eval_results_prior_0-5.json
analysis/wandb_exports/: LARGERPRIORTESTqwen2.50.5Bvprpretrain_mix20250902_031859gamma0.5_common_metrics.csv  LARGERPRIORTESTqwen2.50.5Bvprpretrain_mix20250902_031859gamma0.5_dynamic_metrics.csv  LARGERPRIORTESTqwen2.50.5Bvprpretrain_mix20250902_140547gamma0.5_common_metrics.csv  LARGERPRIORTESTqwen2.50.5Bvprpretrain_mix20250902_140547gamma0.5_dynamic_metrics.csv  LARGERPRIORTESTqwen2.50.5Bvprpretrain_mix20250903_005619gamma0.5_common_metrics.csv  LARGERPRIORTESTqwen2.50.5Bvprpretrain_mix20250903_005619gamma0.5_dynamic_metrics.csv  LORATESTqwen2.50.5Bvprpretrain_mix20250901_150242gamma0.5_common_metrics.csv  LORATESTqwen2.50.5Bvprpretrain_mix20250901_150242gamma0.5_dynamic_metrics.csv  PRETRAINTESTqwen2.50.5Bmodpretrain_mix20250828_140245gamma0.5_common_metrics.csv  PRETRAINTESTqwen2.50.5Bvprpretrain_mix20250828_132910gamma0.5_common_metrics.csv  PRETRAINTESTqwen2.50.5Bvprpretrain_mix20250828_132910gamma0.5_dynamic_metrics.csv  experimentstt20250923_0400350.5B_common_metrics.csv  experimentstt20250923_0400350.5B_dynamic_metrics.csv  (+2 more)
conf/: base-mod.yaml  base-qwen.yaml  base.yaml
conf/data/: lang_mix.yaml  sft_mix.yaml  (+2 more)
config/: 0.5B.yaml  1.5B.yaml  14B.yaml  32B.yaml  3B.yaml  72B.yaml  7B.yaml  base.yaml  default.yaml  dtf_scratch.yaml  dtf_transfer.yaml  laptop.yaml  laptop_10m_wikitext.yaml  mac_training.yaml  mod_scratch.yaml  mod_transfer.yaml  pretrain_0-5B_qwen2-5.yaml  pretrain_0-5B_qwen2-5_dtf.yaml  quick_test.yaml  standard_scratch.yaml  standard_transfer.yaml  test_pipeline.yaml  train.yaml  training_tdtf.yaml
configs/: base.yaml
docs/: DTF-Report.md  Dynamic-Transformers_NEW_BROKEN.md  Dynamic-Transformers_OLD.md  Dynamic-Transformers_V2_Functioning.md  Feature-Spec.md  Implementation-Details.md  Implementation-Notes.md  MoD-Paper.md  MoD-Spec.md  OmegaConf.txt  Qwen-Spec.md  Qwen_2-5_Paper.md  STT-Spec.md  STT.md  TDTF-Spec.md  VPR-Paper.md  v2.md  v3.md
dynamic_transformer/: data.py  logging.py  trainer.py
eval/: benchmarks.py  config.py  dynamic_llama_utils.py  runners.py  utils.py  utils_old.py
notebooks/: datasets.ipynb  llama_3-2_experiment.ipynb  minigpt_explained.ipynb  v1.ipynb  v1_1.ipynb  v1_2.ipynb  v1_3.ipynb  v1_4.ipynb  v1_5.ipynb
outputs/: README.md
scripts/: clean.sh  eval.sh  flush-gpu.sh  infer.sh  run.sh  setup.sh  train.sh
test/: test_models.py
tests/: conftest.py  test_blocks.py  test_evaluation_integration.py  test_layers.py  test_models.py  test_routers.py  test_training_integration.py
wandb/: latest-run
(+344 files in other folders)
