[project]
name = "dynamic-transformer"
version = "0.2.0"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "datasets>=2.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "tqdm>=4.60.0",
    "torch>=2.0.0, <2.4.0; sys_platform == 'darwin'",
    "torch>=2.0.0; sys_platform == 'linux'",
    "lm_eval>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]